Drive-Fixed riderman alignment

--- a/client/src/components/CustomizedBadges/style.scss
+++ b/client/src/components/CustomizedBadges/style.scss
@@ -1,7 +1,7 @@
 
 [class*="floatEffect-"] {
   // margin-left: 10px;
-  width: 90vw;
+  width: 5vw;
   // box-shadow: 1px 2px 6px 2px #000
 }
 .floatEffect-1 {
